adding the images slider section

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                  </ul>    
                  </div>
              </nav>
-
-
-
-
     </header>
+    <section class="tm-imgslider">
+
+
+
+    </section>
 </body>
 </html>
