adding the image 1 slider section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
              </nav>
     </header>
     <section class="tm-imgslider">
+        <div><div class="tm-slider"><img class="tm-sliderimage" src="images/image_slider 1.jpg" alt="Majestic Hotel"> 
+            <div class="tm-slidertext">
+            <p class="bold"> Experience</p>
+            <p class="simple">The Beauty and ambience </p>
+                <p class="simple">All in one place </p></div>
+    </div></div>
 
 
 
