this commit will add the images 2 of image slider

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
                 <p class="simple">All in one place </p></div>
     </div></div>
 
+    <div><div class="tm-slider"><img class="tm-sliderimage" src="images/image_slider 2.jpg" alt="Majestic Hotel"> 
+        <div class="tm-slidertext">
+        <p class="bold"> Experience</p>
+        <p class="simple">The tranquility </p>
+            <p class="simple">in hotel spa and swimming pool </p></div>
+</div></div>
+
 
 
     </section>
