finishing the image slider section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,24 @@
         <div class="tm-slidertext">
         <p class="bold"> Experience</p>
         <p class="simple">The tranquility </p>
-            <p class="simple">in hotel spa and swimming pool </p></div>
+            <p class="simple">In hotel spa and swimming pool </p></div>
 </div></div>
+   
+<div><div class="tm-slider"><img class="tm-sliderimage" src="images/image_slider 3.jpg" alt="Majestic Hotel"> 
+    <div class="tm-slidertext">
+    <p class="bold"> Experience</p>
+    <p class="simple">The luxurious interiors </p>
+        <p class="simple">In every hotel room </p></div>
+</div></div>
+    
+<div><div class="tm-slider"><img class="tm-sliderimage" src="images/image_slider 4.jpg" alt="Majestic Hotel"> 
+    <div class="tm-slidertext">
+    <p class="bold"> Experience</p>
+    <p class="simple">The mesmerizing interior view </p>
+        <p class="simple">Feeling the comfort</p></div>
+</div></div>
+
+</div>
 
 
 
