removing unwanted code from js

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <p class="bold">About Us</p>
     <p>We are a part of chain of luxury hotels 
         which extends all over the world. We 
-        provide a luxorious stay with various value
+        provide a luxurious stay with various value
         added and free services which will make
         you visit us over and over again.</p>    
     </div>
