this commit will rectfy the spelling mistakes

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     </div>
     <div class="tm-address">
         <p class="bold">Address</p>
-        <p>415, Park Avenu, Hawai
-            Phone : (211) 9275693451
-            Email : majestic@info.com</p>    
+        <p>2043, Parklands Avenue, Nairobi
+            Phone : +254 792756934
+            Email : kimberlyn@info.com</p>    
         </div>
         <br/>
         <div class="tm-media">
