this commit will remove href of nav bar buttons

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <nav class="tm-nav" >
             <div>
                  <ul>
-                     <li class="tm-list"><a href="index.html">Home</a></li>
+                     <li class="tm-list"><a href="#">Home</a></li>
                    
                      <li class="tm-list" id="booking"><a href="#">Booking</a>
                         
                     </li>
-                     <li><a href="contact.html">Contact</a></li>
+                     <li><a href="#">Contact</a></li>
                  </ul>    
                  </div>
              </nav>
