adding increment and decrement buttons

--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
                 <label for="number1" >Number of Rooms</label><br/>
                     <button type="button" class="counter-minus btn btn-primary">- </button>
                     <input type="number" name="number1" id="number1" value="1">
-                     
+                    <button type="button" class="counter-plus btn btn-primary">+  </button>
                     </div>
                 <div class="tm-num2" id="handleCounter2">      
                     <label for="number2">Number of Guests</label><br/>
                     <button type="button" class="counter-minus btn btn-primary">-</button>
                     <input type="number" name="number2" id="number2" value="1">
+                    <button type="button" class="counter-plus btn btn-primary">+</button>
                        
                         </div>
                     </div>
