displaying the date button and its functionalities

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="tm-form2">
                <div class="tm-cl">
                     <label for="date1" class="arrival">Visiting Dates from Arrival to Departure </label>
-                    <input type="text" name="date1" class="range" readonly="readonly"> 
+                    <input type="text" name="Date..." class="range" placeholder="Date..."> 
             
                 
                  <input type="submit" id="sub" value="Proceed"> 
