--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <nav class="tm-nav" >
             <div>
                  <ul>
-                     <li class="tm-list"><a href="#"><button onClick="Home();" >Home</button></a></li>
+                     <li class="tm-list"><a href="#"><button onClick="Home()" >Home</button></a></li>
                    
                      <li class="tm-list" id="booking" ><a href="#"><button onClick= "toggleForm()" >Booking</button></a>
                         
                     </li>
-                     <li><a href="#">Contact</a></li>
+                     <li><a href="#"><button>Contact</button></a></li>
                  </ul>    
                  </div>
              </nav>
